--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main class="rating">
       <div class="card">
         <div class="star">
-          <img src="./images/icon-star.svg" alt="icon-star.svg" />
+          <img src="./images/icon-star.svg" alt="" aria-hidden="true" />
         </div>
         <h1>How did we do?</h1>
         <p>
@@ -54,7 +54,8 @@
         <div class="img">
           <img
             src="./images/illustration-thank-you.svg"
-            alt="illustration-thank-you.svg"
+            alt=""
+            aria-hidden="true"
           />
         </div>
         <div class="result-rating"></div>
